--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <title>Document</title>
 </head>
 <body>
+  <h1>GRID IS COOL</h1>
+  <nav>
+    <ul>
+      <li>home</li>
+      <li>about</li>
+      <li>photos</li>
+    </ul>
+  </nav>
   <div class="container">
     <div class="item">1</div>
     <div class="item">2</div>
