--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>GRID IS COOL</h1>
+  <h1>CSS GRID IS COOL</h1>
   <nav>
     <ul>
       <li>home</li>
@@ -26,7 +26,6 @@
     <div class="item">7</div>
     <div class="item">8</div>
     <div class="item">9</div>
-    <div class="item">10</div>
   </div>
 </body>
 </html>
