--- a/index.html
+++ b/index.html
@@ -27,5 +27,12 @@
     <div class="item">8</div>
     <div class="item">9</div>
   </div>
+
+  <footer>
+    <ul>
+      <li>github</li>
+      <li>linkedin</li>
+    </ul>
+  </footer>
 </body>
 </html>
