--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li>home</li>
       <li>about</li>
       <li>photos</li>
+      <li>friends</li>
     </ul>
   </nav>
   <div class="container">
