refactoring grid to fill screen

--- a/index.html
+++ b/index.html
@@ -9,32 +9,25 @@
 </head>
 <body>
   <h1>CSS GRID IS COOL</h1>
-  <nav>
-    <ul>
-      <li>home</li>
-      <li>about</li>
-      <li>photos</li>
-      <li>friends</li>
-    </ul>
-  </nav>
   <div class="container">
-    <div class="item">1</div>
-    <div class="item">2</div>
-    <div class="item">3</div>
-    <div class="item">4</div>
-    <div class="item">5</div>
-    <div class="item">6</div>
-    <div class="item">7</div>
-    <div class="item">8</div>
-    <div class="item">9</div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
   </div>
-
-  <footer>
-    <ul>
-      <li>github</li>
-      <li>linkedin</li>
-      <li>resume</li>
-    </ul>
-  </footer>
 </body>
 </html>
